<resources>
    <string name="app_name">AntioquiaTuristicaV2.1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_opciones">Opciones</string>

    <string name="municipio">Municipio de Copacabana</string>
    <string name="descripcion_municipio">El Municipio de Copacabana está situado al norte de la ciudad de Medellín, en el Valle de Aburrá, una de las nueve regiones en las que se divide cultural y geográficamente el Departamento de Antioquia. Limita al Norte con el municipio de San Pedro, al Oriente con el municipio de Girardota, al Occidente con el municipio de Bello y al Sur con los municipios de Guarne y Medellín.</string>
    <string name="about_">About</string>
    <string name="about_text">App desarrollada por Camilo Muñoz</string>
    <string name="asuncion">Iglesia Nuestra Señora de la Asunción</string>
    <string name="asunciondesc">La primera iglesia del balle de aburrá</string>
    <string name="asuncion_info1">Este templo de estilo español fue construido en bloques de piedra por el padre Carlos Mejía en 1870. En los años 40 se le adosó la torre lateral con campanario y reloj. Tiene tres naves y ménsulas en madera con aplicaciones doradas. Alberga el retablo de Nuestra Señora de Copacabana, una de las imágenes más apreciadas por los feligreses, y la escultura de la Virgen de la Asunción, patrona del Municipio, entronizada en 1790.</string>
    <string name="asuncion_info2">La Capilla del Calvario tiene óleos de la Virgen de Chiquinquirá, de Guadalupe, el Señor en la Cruz y María Auxiliadora. Tiene un bello patio que alberga 7 placas en piedra que se instalaron en 2009 con motivo de los 350 años de vida parroquial.</string>
    <string name="bares">BARES</string>
    <string name="bares_">Bares</string>
    <string name="sala94">Sala94</string>
    <string name="sala94desc">Bar, Restaurante, Cocktails</string>
    <string name="sala94dir">Carrera 49 #25-10</string>
    <string name="sala94hor">Jueves a Domingo: 20:00 - 1:00</string>
    <string name="jano">Jano Bar</string>
    <string name="janodesc">Bar, Cocktails</string>
    <string name="janodir">Carrera 49 #20-21</string>
    <string name="janohor">Martes a Jueves: 19:00 - 24:00, Viernes y Sábado: 19:00 - 1:00, Domingos: 19:00 - 24:00</string>
    <string name="bar">Bar</string>
    <string name="konos">Pizza y Konos</string>
    <string name="konosdesc">Pizzeria, Restaurante, Bar, Cocktails</string>
    <string name="konosdir">Carrera 50 #50-24</string>
    <string name="konostel">602 72 45 - Domicilios</string>
    <string name="konoshor">Lunes a Jueves: 12:00 - 24:00, Viernes a Domingo: 12:00 - 1:00</string>
    <string name="comfama">Parque Recreativo Comfama</string>
    <string name="comfamadesc">Parque acuático y diversiones</string>
    <string name="comfama_info1">Ubicado en la vereda Ancón, a 3 kilómetros de la cabecera municipal y a 14 de Medellín, sobre la Autopista Norte. Tiene 16 hectáreas de zonas verdes con senderos para recorrer y disfrutar espacios naturales únicos. Cuenta con lagos, riachuelo, cascada, árboles y jardines. Ofrece una gran variedad de atracciones y servicios para toda la familia: piscinas, toboganes, piletas, baños turcos, canchas de fútbol, tenis y baloncesto, restaurantes y tiendas.</string>
    <string name="cristorey">Unidad Deportiva Cristo Rey</string>
    <string name="cristoreydesc">Recreación y Deporte</string>
    <string name="cristorey_info1">Sede de los Juegos Suramericanos 2010 para las competencias de polo acuático y del Campeonato Suramericano de Natación. Consta de una piscina olímpica para competencias de carácter internacional, una tribuna para más de 600 expectadores, equipada con cabina de prensa para transmisiones deportivas. El bloque administrativo posee camerinos, sala de masajes y calentamiento, sala de prensa, recepción, sala VIP, control de dopaje y tiendas. Cuenta con la última tecnología para transmisión de voz y datos.</string>
    <string name="cristorey_info2">A su lado se encuentra la cancha de fútbol en grama sintética con medidas reglamentarias para realizar partidos avalados por la FIFA. Tiene una tribuna para 680 personas con cabinas de prensa.</string>
    <string name="cruz">Monumento a La Santa Cruz</string>
    <string name="cruzdesc">Cerro, sendero ecológico</string>
    <string name="cruz_info1">En 1968, el padre Jesús Bernal Vélez, cura de Copacabana, inició el proyecto de construcción de un monumento a la Santa Cruz como cumplimiento de una promesa porque le salvó la vida a él y a su madre en un accidente automovilístico y por su gran devoción. Copacabana es llamado por los viajantes aéreos y los que vienen del norte del país, "el pueblito de la cruz". Además el cerro donde está la cruz es utilizado como pista de ciclo montañismo. El Santuario está ubicado en la vereda El Cabuyal y se puede acceder al sitio por la vía principal que conduce a la vereda.</string>
    <string name="cruz_info2">Se recomienda subir caminando por la vía a Cristo Rey para disfrutar del aire puro del campo y del esplendor de la naturaleza, así como de una gran variedad de productos típicos que ofrecen los residentes. La cima es un mirador que ofrece una maravillosa vista de los municipos de Bello y Copacabana. La otra opción es tomar un colectivo a media cuadra del parque que sube hasta el cerro.</string>
    <string name="demografia">DEMOGRAFÍA</string>
    <string name="demografia_">Demografía</string>
    <string name="demografia_info1">El municipio de Copacabana tiene una población de 66.665 mil habitantes (Datos del DANE a Junio 30 de 2011), siendo ésta, la sexta aglomeración urbana del Área Metropolitana del Valle de Aburrá que suma un total de 3.312.165 personas aproximadamente.</string>
    <string name="demografia_info2">Sus principales actividades económicas son: la actividad industrial, las confecciones, la economía informal y la agricultura (principalmente el cultivo de cebolla junca, la naranja y el fique).</string>
    <string name="hot_res">HOTELES Y RESTAURANTES</string>
    <string name="hot_res_">Hoteles y Restaurantes</string>
    <string name="turismo">SITIOS TURÍSTICOS</string>
    <string name="turismo_">Sitios Turísticos</string>
    <string name="brazil">Hospedaje Brazil</string>
    <string name="brazildesc">Hotelería</string>
    <string name="dosburros">Los Dos Burros</string>
    <string name="dosburrosdesc">Comida mexicana</string>
    <string name="HandM">H and M</string>
    <string name="HandMdesc">Restaurante, comidas rápidas</string>
    <string name="tipo">Tipo: </string>
    <string name="dir">Dirección: </string>
    <string name="res_bar">Restaurante y Bar</string>
    <string name="horario">Horario: </string>
    <string name="tel">Teléfono: </string>
    <string name="sanjuan">Iglesia San Juan de la Tasajera</string>
    <string name="sanjuandesc">Donde los fundadores se asentaron</string>
    <string name="sanjuan_info1">Ubicada a dos kilómetros de la cabecera municipal, en el barrio San Juan, se destaca por su bella y sobria arquitectura. Fue construida en la década de los 60 en el mismo lugar donde se ofició la primera misa de la iglesia católica en el Valle de Aburrá, el 8 de septiembre de 1541. Destacan su confesionario y las estaciones del viacrucis tallados en madera.</string>
    <string name="brazildir">Carrera 52 #50-80</string>
    <string name="braziltel">401 49 18</string>
    <string name="brazilemail"> hospedajebrazil@hotmail.com</string>
    <string name="brazilhor">24 Horas</string>
    <string name="email">E-Mail: </string>
    <string name="burrostipo">Comida mexicana</string>
    <string name="burrosdir">Calle 49 #48-43</string>
    <string name="burrostel">401 33 31 - Domicilios</string>
    <string name="burroshor">Lunes a Jueves: 14:00 - 22:00, Viernes a Sábado: 13:00 - 23:30, Domingos: 12:00 - 22:00</string>
    <string name="HandMtipo">Restaurante, comidas rápidas</string>
    <string name="HandMdir">Carrera 51 #50-21</string>
    <string name="HandMtel">401 31 96 - Domicilios</string>
    <string name="HandMhor">Lunes a Jueves: 8:30 - 21:00, Viernes a Domingos: 8:30 - 22:00</string>
    <string name="title_activity_hoteles">Hoteles</string>
    <string name="title_activity_turismo">Turismo</string>
    <string name="title_activity_bares">Bares</string>
    <string name="title_activity_demografia">Demografía</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_sala94">Sala94</string>
    <string name="title_activity_jano">Jano Bar</string>
    <string name="title_activity_pizza">Pizza and Konos</string>
    <string name="title_activity_cruz">Cruz</string>
    <string name="title_activity_asuncion">Asunción</string>
    <string name="title_activity_san_juan">San Juan</string>
    <string name="title_activity_comfama">Comfama</string>
    <string name="title_activity_cristo_rey">Cristo Rey</string>
    <string name="title_activity_brazil">Brazil</string>
    <string name="title_activity_burros">Burros</string>
    <string name="title_activity_hand_m">HandM</string>
    <string name="continuar">Continuar</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
