<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/LayoutExterior"
        tools:context="com.example.juliancamilomunoz.antioquiaturisticav21.Brazil">

        <TextView
            android:text="@string/brazil"
            style="@style/ActivityTitleStyle"/>

        <ImageView
            android:layout_width="330dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/brazilf"/>

        <LinearLayout
            style="@style/PlaceDescription">

            <TextView
                android:text="@string/dir"
                android:textColor="@color/midnightblue"
                style="@style/TextViewNameStyle"/>

            <TextView
                android:text="@string/brazildir"
                style="@style/TextViewNameStyle"/>

        </LinearLayout>

        <LinearLayout
            style="@style/PlaceDescription">

            <TextView
                android:text="@string/tel"
                android:textColor="@color/midnightblue"
                style="@style/TextViewNameStyle"/>

            <TextView
                android:text="@string/braziltel"
                style="@style/TextViewNameStyle"/>

        </LinearLayout>

        <LinearLayout
            style="@style/PlaceDescription">

            <TextView
                android:text="@string/horario"
                android:textColor="@color/midnightblue"
                style="@style/TextViewNameStyle"/>

            <TextView
                android:text="@string/brazilhor"
                style="@style/TextViewNameStyle"/>

        </LinearLayout>

        <LinearLayout
            style="@style/PlaceDescription">

            <TextView
                android:text="@string/email"
                android:textColor="@color/midnightblue"
                style="@style/TextViewNameStyle"/>

            <TextView
                android:text="@string/brazilemail"
                style="@style/TextViewNameStyle"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
