<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutExterior"
    tools:context="com.example.juliancamilomunoz.antioquiaturisticav21.Sala94">

    <TextView
        android:text="@string/sala94"
        style="@style/ActivityTitleStyle"/>

    <ImageView
        android:layout_width="330dp"
        android:layout_height="220dp"
        android:scaleType="fitXY"
        android:src="@drawable/sala94f"/>

    <LinearLayout
        style="@style/PlaceDescription">

        <TextView
            android:text="@string/tipo"
            android:textColor="@color/midnightblue"
            style="@style/TextViewNameStyle"/>

        <TextView
            android:text="@string/res_bar"
            style="@style/TextViewNameStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/PlaceDescription">

        <TextView
            android:text="@string/dir"
            android:textColor="@color/midnightblue"
            style="@style/TextViewNameStyle"/>

        <TextView
            android:text="@string/sala94dir"
            style="@style/TextViewNameStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/PlaceDescription">

        <TextView
            android:text="@string/horario"
            android:textColor="@color/midnightblue"
            style="@style/TextViewNameStyle"/>

        <TextView
            android:text="@string/sala94hor"
            style="@style/TextViewNameStyle"/>

    </LinearLayout>

</LinearLayout>
