<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/LayoutExterior"
        tools:context="com.example.juliancamilomunoz.antioquiaturisticav21.Turismo">

        <TextView
            android:text="@string/turismo"
            style="@style/ActivityTitleStyle"/>

        <LinearLayout
            style="@style/LayoutItemStyle"
            android:onClick="AbrirCruz">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/cruz"/>

            <LinearLayout
                style="@style/LayoutName">

                <TextView
                    android:text="@string/cruz"
                    style="@style/TextViewNameStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cruzdesc"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutItemStyle"
            android:onClick="AbrirAsuncion">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/iglesia_copa"/>

            <LinearLayout
                style="@style/LayoutName">

                <TextView
                    android:text="@string/asuncion"
                    style="@style/TextViewNameStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asunciondesc"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutItemStyle"
            android:onClick="AbrirSanJuan">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/sanjuan"/>

            <LinearLayout
                style="@style/LayoutName">

                <TextView
                    android:text="@string/sanjuan"
                    style="@style/TextViewNameStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sanjuandesc"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutItemStyle"
            android:onClick="AbrirComfama">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/comfama"/>

            <LinearLayout
                style="@style/LayoutName">

                <TextView
                    android:text="@string/comfama"
                    style="@style/TextViewNameStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comfamadesc"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutItemStyle"
            android:onClick="AbrirCristoRey">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/cristorey"/>

            <LinearLayout
                style="@style/LayoutName">

                <TextView
                    android:text="@string/cristorey"
                    style="@style/TextViewNameStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cristoreydesc"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>