<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/LayoutExterior">

        <TextView
            android:text="@string/municipio"
            style="@style/ActivityTitleStyle"/>

        <ImageView
            android:id="@+id/MainEscudoIV"
            android:layout_width="200dp"
            android:layout_height="270dp"
            android:scaleType="fitXY"
            android:src="@drawable/escudocopa2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:text="@string/descripcion_municipio"/>

        <Button
            android:id="@+id/bContinuar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="abrirOpciones"
            android:text="@string/continuar"/>

    </LinearLayout>

</ScrollView>

